--- a/SantaseCardGame/Data/SantaseCardGame.Data/SantaseCardGame.Data.csproj
+++ b/SantaseCardGame/Data/SantaseCardGame.Data/SantaseCardGame.Data.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SantaseCardGame.Data.Models\SantaseCardGame.Data.Models.csproj" />
   </ItemGroup>
 
