--- a/SantaseCardGame/Core/SantaseCardGame.Core.Logic/SantaseCardGame.Core.Logic.csproj
+++ b/SantaseCardGame/Core/SantaseCardGame.Core.Logic/SantaseCardGame.Core.Logic.csproj
@@ -2,16 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Data\SantaseCardGame.Data.Models\SantaseCardGame.Data.Models.csproj" />
     <ProjectReference Include="..\..\Data\SantaseCardGame.Data\SantaseCardGame.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Winners\Round\" />
   </ItemGroup>
 
 </Project>
