--- a/SantaseCardGame/Infrastructure/SantaseCardGame.Infrastructure.States/SantaseCardGame.Infrastructure.States.csproj
+++ b/SantaseCardGame/Infrastructure/SantaseCardGame.Infrastructure.States/SantaseCardGame.Infrastructure.States.csproj
@@ -5,4 +5,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\SantaseCardGame.Data.Models\SantaseCardGame.Data.Models.csproj" />
+  </ItemGroup>
+
 </Project>
