--- a/SantaseCardGame/Core/SantaseCardGame.Core.Logic/SantaseCardGame.Core.Logic.csproj
+++ b/SantaseCardGame/Core/SantaseCardGame.Core.Logic/SantaseCardGame.Core.Logic.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\SantaseCardGame.Data.Models\SantaseCardGame.Data.Models.csproj" />
     <ProjectReference Include="..\..\Data\SantaseCardGame.Data\SantaseCardGame.Data.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\SantaseCardGame.Infrastructure.States\SantaseCardGame.Infrastructure.States.csproj" />
   </ItemGroup>
 
 </Project>
