Created AI base playing logic

--- a/SantaseCardGame/AI/SantaseCardGame.AI.Logic/SantaseCardGame.AI.Logic.csproj
+++ b/SantaseCardGame/AI/SantaseCardGame.AI.Logic/SantaseCardGame.AI.Logic.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\Infrastructure\SantaseCardGame.Infrastructure.States\SantaseCardGame.Infrastructure.States.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PlayLogics\" />
+  </ItemGroup>
+
 </Project>
