Created AI logic for playing first card when it is required to follow suit

--- a/SantaseCardGame/AI/SantaseCardGame.AI.Logic/SantaseCardGame.AI.Logic.csproj
+++ b/SantaseCardGame/AI/SantaseCardGame.AI.Logic/SantaseCardGame.AI.Logic.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="PlayLogics\" />
+    <Folder Include="PlayLogics\SecondPlayer\" />
   </ItemGroup>
 
 </Project>
