--- a/SantaseCardGame/Infrastructure/SantaseCardGame.Infrastructure.IoCContainer/SantaseCardGame.Infrastructure.IoCContainer.csproj
+++ b/SantaseCardGame/Infrastructure/SantaseCardGame.Infrastructure.IoCContainer/SantaseCardGame.Infrastructure.IoCContainer.csproj
@@ -5,4 +5,12 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
