Created game engine

--- a/SantaseCardGame/Core/SantaseCardGame.Core.Engine/SantaseCardGame.Core.Engine.csproj
+++ b/SantaseCardGame/Core/SantaseCardGame.Core.Engine/SantaseCardGame.Core.Engine.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SantaseCardGame.Core.Logic\SantaseCardGame.Core.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
