Created player component

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/SantaseCardGame.Client.Web.csproj
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/SantaseCardGame.Client.Web.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\SantaseCardGame.Core.Engine\SantaseCardGame.Core.Engine.csproj" />
     <ProjectReference Include="..\..\Data\SantaseCardGame.Data.Models\SantaseCardGame.Data.Models.csproj" />
     <ProjectReference Include="..\..\Infrastructure\SantaseCardGame.Infrastructure.States\SantaseCardGame.Infrastructure.States.csproj" />
   </ItemGroup>
