--- a/SantaseCardGame/Data/SantaseCardGame.Data.Models/SantaseCardGame.Data.Models.csproj
+++ b/SantaseCardGame/Data/SantaseCardGame.Data.Models/SantaseCardGame.Data.Models.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Game.cs~RFedc9ed9.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />
   </ItemGroup>
 
