Created AI game player and added logic for starting game

--- a/SantaseCardGame/AI/SantaseCardGame.AI/SantaseCardGame.AI.csproj
+++ b/SantaseCardGame/AI/SantaseCardGame.AI/SantaseCardGame.AI.csproj
@@ -5,4 +5,9 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\SantaseCardGame.Data.Models\SantaseCardGame.Data.Models.csproj" />
+    <ProjectReference Include="..\SantaseCardGame.AI.Logic\SantaseCardGame.AI.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
