--- a/SantaseCardGame/Core/SantaseCardGame.Core.Engine/SantaseCardGame.Core.Engine.csproj
+++ b/SantaseCardGame/Core/SantaseCardGame.Core.Engine/SantaseCardGame.Core.Engine.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\AI\SantaseCardGame.AI\SantaseCardGame.AI.csproj" />
     <ProjectReference Include="..\SantaseCardGame.Core.Logic\SantaseCardGame.Core.Logic.csproj" />
   </ItemGroup>
 
