--- a/SantaseCardGame/Infrastructure/SantaseCardGame.Infrastructure.IoCContainer/SantaseCardGame.Infrastructure.IoCContainer.csproj
+++ b/SantaseCardGame/Infrastructure/SantaseCardGame.Infrastructure.IoCContainer/SantaseCardGame.Infrastructure.IoCContainer.csproj
@@ -6,11 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <ProjectReference Include="..\..\AI\SantaseCardGame.AI.Logic\SantaseCardGame.AI.Logic.csproj" />
+    <ProjectReference Include="..\..\AI\SantaseCardGame.AI\SantaseCardGame.AI.csproj" />
+    <ProjectReference Include="..\..\Core\SantaseCardGame.Core.Engine\SantaseCardGame.Core.Engine.csproj" />
+    <ProjectReference Include="..\..\Data\SantaseCardGame.Data\SantaseCardGame.Data.csproj" />
+    <ProjectReference Include="..\SantaseCardGame.Infrastructure.States\SantaseCardGame.Infrastructure.States.csproj" />
   </ItemGroup>
 
 </Project>
