Added new "GetAll" method to all game storages, refactoring

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/appsettings.json
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/appsettings.json
@@ -8,5 +8,6 @@
     "**/platforms"
   ],
   "gameExpiration": 86400, // 60 * 60 * 24,
-  "saveKey": "SantaseCardGame"
+  "gameKey": "SantaseCardGame",
+  "stateKey": "SantaseCardGameState"
 }
