--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/appsettings.json
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/appsettings.json
@@ -7,6 +7,7 @@
     "**/obj",
     "**/platforms"
   ],
+  "maxSavedGames": 5,
   "gameExpiration": 86400, // 60 * 60 * 24,
   "gameKey": "SantaseCardGame",
   "stateKey": "SantaseCardGameState"
